--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
 
             <div class="photo-container">
-                <img src="image/IMG-20250614-WA0077.jpg" alt="Romantic couple silhouette against sunset sky with hearts floating in the air" id="lovePhoto">
+                <img src="image/IMG-20250614-WA0077.jpg" alt="kiww">
             </div>
 
             <button class="reset-btn" onclick="resetPage()">Ulangi</button>
@@ -184,4 +184,5 @@
     </script>
 </body>
 </html>
+
 
