--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
 
             <div class="photo-container">
-                <img src="image/IMG-20250614-WA0077.jpg" alt="kiww">
+                <img src=".image/IMG-20250614-WA0077.jpg" alt="kiww">
             </div>
 
             <button class="reset-btn" onclick="resetPage()">Ulangi</button>
@@ -184,5 +184,6 @@
     </script>
 </body>
 </html>
+
 
 
